envoy-gateway-bootstrap-reqid-queue-lb/ext_proc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-deployment
  labels:
    app: grpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
      - name: grpc-server
        image: us-docker.pkg.dev/kaushikmitra-gke-dev/kaushikmitra-docker-repo/grpc-vllm-lora-go-1-exp-lb:latest
        args:
        - -pods
        - "vllm-85997b47fc-cw9fm,vllm-85997b47fc-v7p7n,vllm-85997b47fc-vk6mg"
        - -podIPs
        - "10.56.2.37:8000,10.56.1.32:8000,10.56.3.46:8000" 
        ports:
        - containerPort: 9002
      - name: curl
        image: curlimages/curl
        command: ["sleep", "3600"]
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 9002
      targetPort: 9002
  type: ClusterIP
