envoy-gateway-bootstrap-reqid-queue-lb/gateway.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: custom-proxy-config
  namespace: envoy-gateway-system
spec:
  provider:
    type: Kubernetes
    kubernetes:
      envoyDeployment:
        container:
          image: envoyproxy/envoy:v1.31-latest
      envoyService:
        patch:
          type: StrategicMerge
          value:
            spec:
              ports:
                - name: http-8081
                  port: 8081
                  protocol: TCP
                  targetPort: 8081
  bootstrap:
    type: Merge 
    value: |
      static_resources:
        listeners:
          - name: listener_0
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 8081
            filter_chains:
              - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      stat_prefix: http
                      codec_type: AUTO
                      route_config:
                        name: local_route
                        response_headers_to_add:
                          - header:
                              key: "x-request-id"
                              value: "%REQ(X-REQUEST-ID)%"
                        virtual_hosts:      
                          - name: backend
                            domains: ["*"]
                            routes:
                              - match:
                                  prefix: "/"
                                  headers:
                                    - name: "target-pod"
                                      present_match: true
                                route:
                                  cluster: original_destination_cluster
                                  timeout: 1000s
                                typed_per_filter_config:
                                  envoy.filters.http.ext_proc:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                                    disabled: true
                              - match:
                                  prefix: "/"
                                route:  
                                  cluster: original_destination_cluster
                                  timeout: 1000s
                      http_filters:
                        - name: envoy.filters.http.ext_proc
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                            failure_mode_allow: false
                            grpc_service:
                              envoy_grpc:
                                cluster_name: ext_proc_cluster
                            message_timeout: 1000s
                            processing_mode:
                              request_header_mode: "SEND"
                              response_header_mode: "SEND"
                              request_body_mode: "BUFFERED"
                              response_body_mode: "NONE"
                              request_trailer_mode: "SKIP"
                              response_trailer_mode: "SKIP"
                        - name: envoy.filters.http.router
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        clusters:
          - name: original_destination_cluster
            type: ORIGINAL_DST
            original_dst_lb_config:
              use_http_header: true
              http_header_name: "target-pod"
            connect_timeout: 6s
            lb_policy: CLUSTER_PROVIDED
            dns_lookup_family: V4_ONLY
          - name: ext_proc_cluster
            connect_timeout: 1000s
            type: LOGICAL_DNS
            http2_protocol_options: {}
            lb_policy: ROUND_ROBIN
            load_assignment:
              cluster_name: ext_proc_cluster
              endpoints:
                - lb_endpoints:
                    - endpoint:
                        address:
                          socket_address:
                            address: grpc-server-service.default.svc.cluster.local
                            port_value: 9002
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: inference-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:  
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
spec:
  gatewayClassName: inference-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
